# attest

./: .gitignore  .mcp.json  ATTEST_Client_Intake_Questions.md  ATTEST_Patent_Tailoring_Consideration.md  ATTEST_build_brief.md  CLAUDE.md  INDEX.md  LIBRARY.md  README.md  ROADMAP.md  attest_rig.py  conftest.py  demo.py  evidence_view.html  golden_patent.json  golden_seed.json  pyproject.toml
.claude/commands/: ground.md
.claude/workflows/: provability-research.js
.github/workflows/: ci.yml
audit_log/: layer_e_results.jsonl
corpus/samples/: sample_patent.txt
corpus/store/AAPL-10K-FY2024/: canonical.txt  meta.json
corpus/toy/: manifest.json
corpus/toy/AAPL-10K-FY2024/: 01_cover.txt  02_statements_of_operations.txt  03_balance_sheets.txt  04_statements_of_cash_flows.txt  05_auditor_report.txt
docs/: desktop_setup.md  landscape_lessons.md  layer0_gate.md  layer_e_baseline.md  layer_e_patent_baseline.md  ocr_confirmation_explainer.html  ocr_explainer.html  provability_findings.html  provability_research.md  rag_extension_discussion.html  rt4_and_next_steps.html  rt4_payoff_explainer.html  system_overview.html  truth_contract.md
scripts/: _bootstrap.py  build_evidence_view.py  build_toy_corpus.py  calibrate_threshold.py  census_denial_cues.py  fetch_patent_figures.py  ingest_corpus.py  ingest_files.py  ocr_patent_figures.py  patent_figures_view.py  patent_support_view.py  resolve_golden_quotes.py  run_layer_e.py
src/attest/: __init__.py  __main__.py  audit.py  cli.py  contract.py  cues.py  evidence_view.py  figures_map.py  frame.py  layer_e.py  mcp_server.py  patents.py  retrieval.py  session.py  spans.py  support.py  tools.py  verify.py
src/attest/ingest/: __init__.py  document.py  edgar.py  files.py  store.py
tests/: test_audit.py  test_boundary.py  test_cues.py  test_evidence_view.py  test_figures_map.py  test_frame.py  test_i4.py  test_ingest.py  test_ingest_files.py  test_layer_e.py  test_patent_golden.py  test_patents.py  test_retrieval.py  test_rig.py  test_session.py  test_smoke.py  test_spans.py  test_support.py  test_tools.py  test_toy_corpus.py  test_verify.py
