[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attest"
version = "0.1.0"
description = "Grounded-retrieval tools: ground or abstain, never invent. Every claim traceable to a verbatim, hash-matched source span."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "Lifted Truck" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
mcp = [
  "mcp>=1.0",   # the MCP server adapter (mcp_server.py); not needed for the Layer-0 gate
]
ocr = [
  # Ingestion-time drawing-sheet OCR (scripts/ocr_patent_figures.py, D28). macOS-only
  # (Apple Vision, on-device); NEVER a runtime or CI dependency — runtime/CI consume
  # only the frozen ocr_manifest.json via attest.figures_map.
  "pyobjc-framework-Vision; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz; sys_platform == 'darwin'",
]

[project.scripts]
attest = "attest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "layer0: deterministic component eval — the blocking CI gate (docs/layer0_gate.md)",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
# Boring on purpose (brief §9). Pyflakes + pycodestyle + isort + bugbear.
select = ["E", "F", "I", "B"]
